Finish first draft

--- a/dist.ini
+++ b/dist.ini
@@ -17,3 +17,10 @@ cmdline=classic
 [Prereqs]
 strict=0
 warnings=0
+PERLANCAR::Module::List=0
+
+[Prereqs / DevelopX_spec]
+-phase=develop
+-relationship=x_spec
+Rinci=1.1.0
+
