--- a/dist.ini
+++ b/dist.ini
@@ -25,6 +25,7 @@ strict=0
 warnings=0
 Color::ANSI::Util=0.161
 Color::RGB::Util=0.600
+Log::ger=0.037
 Module::List::Tiny=0
 String::Pad=0
 
@@ -33,3 +34,4 @@ String::Pad=0
 -relationship=x_spec
 ColorTheme=2.0.0
 Rinci=1.1.90
+
