[incompatible] [cli show-color-theme-swatch] Accept theme module name with optional args instead of separate -m and -A

--- a/dist.ini
+++ b/dist.ini
@@ -27,6 +27,7 @@ Color::ANSI::Util=0.161
 Color::RGB::Util=0.600
 Log::ger=0.037
 Module::List::Tiny=0
+Module::Load::Util=0
 String::Pad=0
 
 [Prereqs / DevelopX_spec]
@@ -34,3 +35,4 @@ String::Pad=0
 -relationship=x_spec
 ColorTheme=2.1.0
 Rinci=1.1.90
+
